--- a/MiniShopMVC/appsettings.Development.json
+++ b/MiniShopMVC/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=5432;database=mini_shop_db;user id=postgres;password=postgres"
   }
 }
